refactor: buttons in table component upgraded to new version

--- a/frontend/src/app/libs/common-components/components/icon/icon.component.html
+++ b/frontend/src/app/libs/common-components/components/icon/icon.component.html
@@ -1,9 +1,5 @@
 <mat-icon
 	*ngIf="icon"
-	class="icon"
-	[class.icon--{{size?}}]="isIconExtraSmall"
-	[class.icon--{{size?}}]="isIconSmall"
-	[class.icon--{{size?}}]="isIconMedium"
-	[class.icon--{{size?}}]="isIconLarge">
+	class="icon icon--{{size}}">
 		{{icon}}
 </mat-icon>
