--- a/frontend/src/app/libs/common-components/components/table/table.theme.scss
+++ b/frontend/src/app/libs/common-components/components/table/table.theme.scss
@@ -42,6 +42,8 @@
 		}
 
 		.mat-cell {
+			min-height: 44px;
+
 			vertical-align: middle;
 		}
 
@@ -81,6 +83,15 @@
 					border-bottom: none;
 				}
 			}
+		}
+	}
+	.button {
+
+		&__icon {
+			padding: 0 4px;
+		}
+		&__text {
+			padding: 0 4px;
 		}
 	}
 }
