refactor: removed unconvinienced classes with padding for button content

--- a/frontend/src/app/libs/common-components-demo/components/button-demo/button-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/components/button-demo/button-demo.component.html
@@ -26,7 +26,6 @@
 			<app-demo-state [title]="'medium icon'" class="button-demo__container">
 				<app-button>
 					<app-icon
-						class="button-demo__icon"
 						[icon]="'done'"
 						[size]="medium">
 					</app-icon>
@@ -35,11 +34,10 @@
 			<app-demo-state [title]="'medium icon with button text'"  class="button-demo__container">
 				<app-button type="outlined">
 					<app-icon
-						class="button-demo__icon"
 						[icon]="'done_all'"
 						[size]="medium">
 					</app-icon>
-					<span class="button-demo__text">
+					<span>
 						{{buttonText}}
 					</span>
 				</app-button>
@@ -47,11 +45,10 @@
 			<app-demo-state [title]="'small icon with button text'" class="button-demo__container">
 				<app-button type="flat">
 					<app-icon
-						class="button-demo__icon"
 						[icon]="'fingerprint'"
 						[size]="small">
 					</app-icon>
-					<span class="button-demo__text">
+					<span>
 						{{buttonText}}
 					</span>
 				</app-button>
@@ -85,7 +82,6 @@
 			<app-demo-state [title]="'medium icon'" class="button-demo__container" [isDark]="true">
 				<app-button [theme]="darkTheme">
 					<app-icon
-						class="button-demo__icon"
 						[icon]="'done'"
 						[size]="medium">
 					</app-icon>
@@ -94,11 +90,10 @@
 			<app-demo-state [title]="'medium icon with button text'"  class="button-demo__container" [isDark]="true">
 				<app-button type="outlined" [theme]="darkTheme">
 					<app-icon
-						class="button-demo__icon"
 						[icon]="'done_all'"
 						[size]="medium">
 					</app-icon>
-					<span class="button-demo__text">
+					<span>
 						{{buttonText}}
 					</span>
 				</app-button>
@@ -106,11 +101,10 @@
 			<app-demo-state [title]="'small icon with button text'" class="button-demo__container" [isDark]="true">
 				<app-button type="flat" [theme]="darkTheme">
 					<app-icon
-						class="button-demo__icon"
 						[icon]="'fingerprint'"
 						[size]="small">
 					</app-icon>
-					<span class="button-demo__text">
+					<span>
 						{{buttonText}}
 					</span>
 				</app-button>
