--- a/frontend/src/app/libs/common-components/components/icon/icon.component.scss
+++ b/frontend/src/app/libs/common-components/components/icon/icon.component.scss
@@ -1,3 +1,17 @@
+:host {
+	line-height: 0;
+}
+
+:host:first-child {
+	padding-right: 6px;
+}
+:host:last-child {
+	padding-left: 6px;
+}
+:host:only-child {
+	padding: 0px;
+}
+
 .icon {
 
 	&--extra-small {
