feat: icon button component create

--- a/frontend/src/app/libs/common-components-demo/common-components-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/common-components-demo.component.html
@@ -5,6 +5,7 @@
 	<app-typography-demo></app-typography-demo>
 	<app-slide-toggle-demo></app-slide-toggle-demo>
 	<app-button-demo></app-button-demo>
+	<app-icon-button-demo></app-icon-button-demo>
 	<app-popover-demo></app-popover-demo>
 	<app-scrollbar-demo></app-scrollbar-demo>
 	<app-radio-group-demo></app-radio-group-demo>
