--- a/frontend/src/app/libs/common-components-demo/components/button-demo/button-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/components/button-demo/button-demo.component.html
@@ -2,48 +2,48 @@
 	<div class="light-theme button-demo__states">
 		<div class="button-demo__active">
 			<app-demo-state [title]="'basic'" class="button-demo__container">
-				<app-button>Button</app-button>
+				<app-button>{{buttonText}}</app-button>
 			</app-demo-state>
 			<app-demo-state [title]="'outlined'" class="button-demo__container">
-				<app-button type="outlined">Button</app-button>
+				<app-button type="outlined">{{buttonText}}</app-button>
 			</app-demo-state>
 			<app-demo-state [title]="'flat'" class="button-demo__container">
-				<app-button type="flat">Button</app-button>
+				<app-button type="flat">{{buttonText}}</app-button>
 			</app-demo-state>
 		</div>
 		<div class="button-demo__disabled">
 			<app-demo-state class="button-demo__container">
-				<app-button [disabled]="true">Button</app-button>
+				<app-button [disabled]="true">{{buttonText}}</app-button>
 			</app-demo-state>
 			<app-demo-state class="button-demo__container">
-				<app-button type="outlined" [disabled]="true">Button</app-button>
+				<app-button type="outlined" [disabled]="true">{{buttonText}}</app-button>
 			</app-demo-state>
 			<app-demo-state class="button-demo__container">
-				<app-button type="flat" [disabled]="true">Button</app-button>
+				<app-button type="flat" [disabled]="true">{{buttonText}}</app-button>
 			</app-demo-state>
 		</div>
 	</div>
 	<div class="dark-theme button-demo__states">
 		<div class="button-demo__active">
 			<app-demo-state [title]="'basic'" class="button-demo__container" [isDark]="true">
-				<app-button [theme]="darkTheme">Button</app-button>
+				<app-button [theme]="darkTheme">{{buttonText}}</app-button>
 			</app-demo-state>
 			<app-demo-state [title]="'outlined'" class="button-demo__container" [isDark]="true">
-				<app-button type="outlined" [theme]="darkTheme">Button</app-button>
+				<app-button type="outlined" [theme]="darkTheme">{{buttonText}}</app-button>
 			</app-demo-state>
 			<app-demo-state [title]="'flat'" class="button-demo__container" [isDark]="true">
-				<app-button type="flat" [theme]="darkTheme">Button</app-button>
+				<app-button type="flat" [theme]="darkTheme">{{buttonText}}</app-button>
 			</app-demo-state>
 		</div>
 		<div class="button-demo__disabled">
 			<app-demo-state class="button-demo__container" [isDark]="true">
-				<app-button [disabled]="true" [theme]="darkTheme">Button</app-button>
+				<app-button [disabled]="true" [theme]="darkTheme">{{buttonText}}</app-button>
 			</app-demo-state>
 			<app-demo-state class="button-demo__container" [isDark]="true">
-				<app-button type="outlined" [disabled]="true" [theme]="darkTheme">Button</app-button>
+				<app-button type="outlined" [disabled]="true" [theme]="darkTheme">{{buttonText}}</app-button>
 			</app-demo-state>
 			<app-demo-state class="button-demo__container" [isDark]="true">
-				<app-button type="flat" [disabled]="true" [theme]="darkTheme">Button</app-button>
+				<app-button type="flat" [disabled]="true" [theme]="darkTheme">{{buttonText}}</app-button>
 			</app-demo-state>
 		</div>
 	</div>
