--- a/frontend/src/app/libs/common-components/components/button/button.component.html
+++ b/frontend/src/app/libs/common-components/components/button/button.component.html
@@ -32,6 +32,7 @@
 </ng-container>
 
 <ng-template #buttonText>
-	<mat-icon *ngIf="icon" class="button__icon">{{icon}}</mat-icon>
-	<ng-content></ng-content>
+	<div class="button__content">
+		<ng-content></ng-content>
+	</div>
 </ng-template>
