--- a/frontend/src/app/libs/auth-pages/sign-in/sign-in.component.scss
+++ b/frontend/src/app/libs/auth-pages/sign-in/sign-in.component.scss
@@ -1,1 +1,100 @@
+@import "variables";
+
+.sign-in-page {
+	display: flex;
+	width:100%;
+ 	height: 100vh; 
+
+	&__container-img {
+		flex: 1;
+		height: 100%;
+		background-color:#F2F4F8; 
+	}
+	&__img {
+		width: 100%; 
+	    height: auto; 
+   	}
+	&__container-page {
+	   display:flex;
+	   flex-direction:column;
+	   flex: 3;
+	   height: 100%;
+	}
+	&__container-form {
+		display: flex;
+		flex-direction: column; 
+		align-items: center;  
+        margin:auto;
+	 }
+	 &__link-welcomeBack {
+		@include text-h2();
+		color: $color-white; 
+		cursor: default;
+
+	}
+	 &__link {
+		@include text-p();
+		color: $color-primary;
+		text-align: right;
+		width:100%; 
+		margin:15px 0 40px 0;
+		cursor: default;
+	}
+	&__btn {
+		text-align: center;
+	}
+	&__icon {
+		margin: 15px 0 7px 0;
+	} 
+	&__header {
+		align-self: flex-end;
+		margin: 40px 70px 0 0; 
+	}
+	&__text {
+		@include text-p();
+		margin-left:12px;
+		cursor: default;
+
+		&--white {
+			color: $color-white;
+		}
+		&--blue {
+			color: $color-primary;
+		}
+	}
+
+	&__container-divider {
+		display:flex;
+		align-items: center;
+	 	margin-bottom: 10px;
+	} 
+	&__divider {
+		background: $color-white-10;
+		height: 1px;
+		width: 160px;
+	} 
+	&__or {
+		@include text-h4();
+		color: $color-white-50;
+		margin: 25px;
+	}
+
+}
+
+::ng-deep{
+	.mat-form-field {
+	width: 390px !important;
+}
+
+
+}
+ ::ng-deep{
+	.mat-button,
+	.mat-flat-button {
+		padding: 12px 40px;
+	}
+}  
+
+
+
 
