--- a/frontend/src/app/libs/container/container.component.html
+++ b/frontend/src/app/libs/container/container.component.html
@@ -1,5 +1,6 @@
-<app-header *ngIf="!hideHeader"></app-header>
+<app-header *ngIf="!(hideHeader$ | async)"></app-header>
 <div class="container">
 	<router-outlet></router-outlet>
 </div>
-<app-footer *ngIf="!hideFooter"></app-footer>
+<app-footer *ngIf="!(hideFooter$ | async)"></app-footer>
+
