--- a/frontend/src/app/libs/auth-pages/sign-in/sign-in.component.scss
+++ b/frontend/src/app/libs/auth-pages/sign-in/sign-in.component.scss
@@ -3,11 +3,12 @@
 .sign-in-page {
 	display: flex;
 	width:100%;
- 	height: 100vh; 
+	height: 100vh;  
+	background: $color-black;
 
 	&__container-img {
 		flex: 1;
-		height: 100%;
+	 	height: 100%; 
 		background-color:#F2F4F8; 
 	}
 	&__img {
@@ -18,7 +19,7 @@
 	   display:flex;
 	   flex-direction:column;
 	   flex: 3;
-	   height: 100%;
+ 	   height: 100%; 
 	}
 	&__container-form {
 		display: flex;
@@ -82,20 +83,25 @@
 
 }
 
-::ng-deep{
-	.mat-form-field {
-	width: 390px !important;
-}
-
-
-}
  ::ng-deep{
+	input:-webkit-autofill,
+	input:-webkit-autofill:hover,
+	input:-webkit-autofill:active,
+	input:-webkit-autofill:focus {
+	 	background-color: $color-black !important;
+   		color:white !important;  
+		-webkit-box-shadow: 0 0 0 1000px $color-black inset !important;
+	 	-webkit-text-fill-color: white !important; 
+		}
+	.mat-form-field {
+		width: 390px !important;
+	}
 	.mat-button,
 	.mat-flat-button {
 		padding: 12px 40px;
 	}
-}  
+	.grecaptcha-badge {
+		visibility: hidden;
+   }
 
-
-
-
+}
