feat: changed img from png to svg (#89)

--- a/frontend/src/app/libs/container/components/localization/localization.component.html
+++ b/frontend/src/app/libs/container/components/localization/localization.component.html
@@ -5,7 +5,7 @@
 	<mat-menu class="localization__menu" #menu="matMenu">
 		<button mat-menu-item class="localization__menu-item"
 			*ngFor="let locale of translateService.getLangs()" (click)="translateService.use(locale)">
-		<img [src]=" locale == 'en' ? 'assets/images/localization/icon-uk-flag.png' : 'assets/images/localization/icon-russian-flag.png'" class="localization__flag">
+		<img [src]=" locale == 'en' ? 'assets/images/localization/icon-uk-flag.svg' : 'assets/images/localization/icon-russian-flag.svg'" class="localization__flag">
 			<span class="localization__language">{{(locale == 'en' ? 'BUTTON.LANGUAGE-EN' : 'BUTTON.LANGUAGE-RU') | translate}}</span>
 		</button>
 	</mat-menu>
