--- a/frontend/src/app/libs/auth-pages/sign-up/sign-up.component.html
+++ b/frontend/src/app/libs/auth-pages/sign-up/sign-up.component.html
@@ -1,29 +1,48 @@
-<div>
-  <form [formGroup]="signUpFormGroup" (ngSubmit)="submit()">
-    <div>
-      <mat-form-field appearance="fill">
-        <mat-label>Enter your email</mat-label>
-        <input matInput placeholder="pat@example.com" type="email" formControlName="email" />
-        <mat-error *ngIf="emailInputErrorMessage">{{ emailInputErrorMessage }}</mat-error>
-      </mat-form-field>
+<div class="container">
+    <div class='signin__background-container'>
+        <img src="assets/images/ninjaBackground.svg">
+    </div>
+    <div class="container_content">
+        <div class="container__form-signin">
+            <div class="container_signin">
+                <p class="typography__white">Already have an account?</p>
+                <a href="https://www.google.com/" target="_blank">Sign in</a>
+            </div>
+        <h2 class="typography__white">Create Account</h2>
+        <div class="container__logo">
+            <img src="assets/images/logos/google.svg">
+            <img src="assets/images/logos/linkedin.svg">
+            <img src="assets/images/logos/facebook.svg">
+            <img src="assets/images/logos/github.svg">
+        </div>
+        <div>
+            <h4 class="typography__white">OR</h4>
+        </div>
+        <form [formGroup]="signUpFormGroup" (ngSubmit)="submit()">
+            <div>
+            <app-input class="input_medium" [theme]="darkTheme" [inputValidators]="textSyncValidators" [type]="'text'" [label]="'First Name'" [placeholder]="'First Name'" formControlName="firstName"></app-input>
+            <app-input class="input_medium" [theme]="darkTheme" [inputValidators]="textSyncValidators" [type]="'text'" [label]="'Last Name'" [placeholder]="'Last Name'" formControlName="lastName"></app-input>
+            </div>
+            <div>
+                <app-input class="input_big" [theme]="darkTheme" [inputValidators]="emailValidators" [type]="'email'" [label]="'Email'" [placeholder]="'example@gmail.com'" formControlName="email"></app-input>
+            </div>
+            <div>
+                <app-input class="input_big" [theme]="darkTheme" [inputValidators]="passwordValidators" [type]="'password'" [label]="'Password'" [placeholder]="'At least 8 characters, numbers and latin letters only'" formControlName="password"></app-input>
+            </div>
+            <div>
+                <app-input class="input_big" [theme]="darkTheme" [inputValidators]="textSyncValidators" [type]="'text'" [label]="'Mobile phone (optional)'" [placeholder]="'Mobile phone (optional)'" formControlName="mobilePhone"></app-input>
+            </div>
+            <div>
+            </div>
+        
+            <div class="container__button">
+            <app-button type="flat">SIGN UP</app-button>
+            </div>
+        
+        </form>
+        
+        <mat-error *ngIf="authError" (click)="submit()">{{ authError }}</mat-error>
+        </div>
     </div>
 
-    <div>
-      <mat-form-field appearance="fill">
-        <mat-label>Enter your password</mat-label>
-        <input matInput [type]="hidePassword ? 'password' : 'text'" formControlName="password" autocomplete="on" />
-        <mat-error *ngIf="passwordInputErrorMessage">{{ passwordInputErrorMessage }}</mat-error>
-        <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword">
-          <mat-icon>{{ passwordIconVisibility }}</mat-icon>
-        </button>
-      </mat-form-field>
-    </div>
-
-    <div>
-      <button mat-raised-button [disabled]="!signUpFormGroup.valid || isLoading">Sign up</button>
-    </div>
-
-  </form>
-
-  <mat-error *ngIf="authError">{{ authError }}</mat-error>
 </div>
