--- a/frontend/src/app/libs/container/components/header/header.component.html
+++ b/frontend/src/app/libs/container/components/header/header.component.html
@@ -3,32 +3,25 @@
 		<img class="header__logo" src="assets/images/logo.svg">
 	</div>
 	<div class="header__admin-buttons" *ngIf="userService.isAdminUser">
-		<app-button 
-				class="header__admin-button"
-				[class.header__admin-button--active]="adminLinksActivation.get(eventsLink)"
-				[theme]="darkTheme" 
-				[disableRipple]="true" 
-				[disableHover]="true"
-				(click)="onEventsClick()">
+		<app-button class="header__admin-button"
+			[class.header__admin-button--active]="adminLinksActivation.get(eventsLink)" [theme]="darkTheme"
+			[disableRipple]="true" [disableHover]="true" (click)="onEventsClick()">
 			{{"BUTTON.EVENTS" | translate}}
 		</app-button>
-		<app-button 
-				class="header__admin-button" 
-				[class.header__admin-button--active]="adminLinksActivation.get(administrationLink)"
-				[theme]="darkTheme"
-				[disableRipple]="true" 
-				[disableHover]="true"
-				(click)="onAdministrationClick()">
+		<app-button class="header__admin-button"
+			[class.header__admin-button--active]="adminLinksActivation.get(administrationLink)" [theme]="darkTheme"
+			[disableRipple]="true" [disableHover]="true" (click)="onAdministrationClick()">
 			{{"BUTTON.ADMINISTRATION" | translate}}
 		</app-button>
 	</div>
 	<div class="header__common-buttons">
 		<app-localization class="header__localization"></app-localization>
-		<app-button class="header__button" *ngIf="userService.isEventManagerUser" [theme]="darkTheme" [type]="flatButtonType">
+		<app-button class="header__button" *ngIf="userService.isEventManagerUser" [theme]="darkTheme"
+			[type]="flatButtonType">
 			{{"BUTTON.CREATE_EVENT" | translate}}
 		</app-button>
 		<ng-container *ngIf="userService.isUnauthorizedUser">
-			<app-button class="header__button" [theme]="darkTheme" [type]="outlinedButtonType" (click)="onSignInPage()">
+			<app-button class="header__button" [theme]="darkTheme" [type]="outlinedButtonType" routerLink="signin">
 				{{"BUTTON.SIGN_IN" | translate}}
 			</app-button>
 			<app-button class="header__button" [theme]="darkTheme" [type]="flatButtonType" routerLink="signup">
