--- a/frontend/src/app/libs/event-description/components/event-description-panel/event-description-panel.component.html
+++ b/frontend/src/app/libs/event-description/components/event-description-panel/event-description-panel.component.html
@@ -1,27 +1,67 @@
+<!-- <div class="app-event-description-panel">
+	<app-breadcrumb [event]="event"></app-breadcrumb>
+	<div class="app-event-description-panel__title">
+		<div>{{event.title}}</div>
+	</div>
+	<ng-container *ngIf="event.endDate else withoutEndDateTemplate">
+		<div class="app-event-description-panel__date">
+			{{ event.startDate | date:'d MMM yy' }} - {{ event.endDate | date:'d MMM yy' }}
+		</div>
+		<div class="app-event-description-panel__time">
+			{{ event.startTime | date:'h a' }} - {{ event.endTime | date:'h a' }}
+		</div>
+	</ng-container>
+	<ng-template #withoutEndDateTemplate>
+		<div class="app-event-description-panel__date">
+			{{ event.startDate | date:'d MMM yy' }}
+		</div>
+		<div class="app-event-description-panel__time">
+			<span>In Progress</span>
+		</div>
+	</ng-template>
+	<div class="app-event-description-panel__description" [innerHTML]="event.description"></div>
+	<div class="app-event-description-panel__tool-tip" matTooltip="You must be logged in to participate in this round"
+		[matTooltipDisabled]="userLoginStatus">
+		<button mat-raised-button class="app-event-description-panel__take-part-button"
+			[disabled]="!userLoginStatus">TAKE
+			PART</button>
+	</div>
+</div> -->
+
+
 <div class="app-event-description-panel">
-  <div class="app-event-description-panel__title">
-    <div>{{event.title}}</div>
-  </div>
-  <ng-container *ngIf="event.endDate else withoutEndDateTemplate">
-    <div class="app-event-description-panel__date">
-      {{ event.startDate | date:'d MMM yy' }} - {{ event.endDate | date:'d MMM yy' }}
-    </div>
-    <div class="app-event-description-panel__time">
-      {{ event.startTime | date:'h a' }} - {{ event.endTime | date:'h a' }}
-    </div>
-  </ng-container>
-  <ng-template #withoutEndDateTemplate>
-    <div class="app-event-description-panel__date">
-      {{ event.startDate | date:'d MMM yy' }}
-    </div>
-    <div class="app-event-description-panel__time">
-      <span>In Progress</span>
-    </div>
-  </ng-template>
-  <div class="app-event-description-panel__description" [innerHTML]="event.description"></div>
-  <div class="app-event-description-panel__tool-tip" matTooltip="You must be logged in to participate in this round"
-    [matTooltipDisabled]="userLoginStatus">
-    <button mat-raised-button class="app-event-description-panel__take-part-button" [disabled]="!userLoginStatus">TAKE
-      PART</button>
-  </div>
+	<app-breadcrumb [event]="event"></app-breadcrumb>
+	<div class="app-event-description-panel__container {{event?.color}}"> 
+		<div class="app-event-description-panel__box-left">
+			<div class="app-event-description-panel__title">{{event.title}}</div>
+			<div class="app-event-description-panel__description" [innerHTML]="event.description"></div>
+			<div class="app-event-description-panel__tool-tip"
+				matTooltip="You must be logged in to participate in this round" [matTooltipDisabled]="userLoginStatus">
+				<!-- <button mat-raised-button class="app-event-description-panel__take-part-button"
+					[disabled]="!userLoginStatus">TAKE
+					PART</button> -->
+						<app-button type="flat" class="app-event-description-panel__take-part-button">TAKE PART</app-button>
+			</div>
+		</div>
+
+		<div class="app-event-description-panel__box-right">
+			<ng-container *ngIf="event.endDate else withoutEndDateTemplate">
+				<div class="app-event-description-panel__date">
+					{{ event.startDate | date:'d MMM yy' }} - {{ event.endDate | date:'d MMM yy' }}
+				</div>
+				<div class="app-event-description-panel__time">
+					{{ event.startTime | date:'h a' }} - {{ event.endTime | date:'h a' }}
+				</div>
+			</ng-container>
+			<ng-template #withoutEndDateTemplate>
+				<div class="app-event-description-panel__date">
+					{{ event.startDate | date:'d MMM yy' }}
+				</div>
+				<div class="app-event-description-panel__time">
+					<span>In Progress</span>
+				</div>
+			</ng-template>
+		</div>
+
+	</div>
 </div>
